--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,9 +26,9 @@ nav:
     - Base & Pen Configuration: Production/basePenConfig.md
     - VTT Configuration:
       - Foundry VTT:
-        - Installing the Module: Shared/foundryInstall.md
-        - Foundry Setup: Shared/foundrySetup.md
-        - Connecting to the Sensor: Shared/foundryConnection.md
+        - Installing the Module: Production/foundryInstall.md
+        - Foundry Setup: Production/foundrySetup.md
+        - Connecting to the Sensor: Production/foundryConnection.md
         - Module Configuration: Production/foundryConfig.md
     - Sensor Calibration: Production/calibration.md
     - Usage: 
@@ -42,7 +42,7 @@ nav:
     - Build Instructions:
       - Sensor: DIY/BuildInstructions/sensor.md
       - Base: DIY/BuildInstructions/base.md
-    - Updating Firmware: DIY/sensorUpdating.md
+    - Updating Firmware: DIY/Updating/sensorUpdating.md
     - Sensor Positioning: 
       - Mounting: DIY/SensorPositioning/sensorMounting.md
       - Sensor-to-Display Distance: DIY/SensorPositioning/sensorDistance.md
@@ -53,9 +53,9 @@ nav:
       - Sensor Settings: DIY/SensorConfiguration/sensorSettings.md
     - VTT Configuration:
       - Foundry VTT:
-        - Installing the Module: Shared/foundryInstall.md
-        - Foundry Setup: Shared/foundrySetup.md
-        - Connecting to the Sensor: Shared/foundryConnection.md
+        - Installing the Module: DIY/foundryInstall.md
+        - Foundry Setup: DIY/foundrySetup.md
+        - Connecting to the Sensor: DIY/foundryConnection.md
         - Module Configuration: DIY/foundryConfig.md
     - Sensor Calibration: DIY/calibration.md
     - Usage: DIY/usage.md
