--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,8 +74,10 @@ nav:
     - Usage: Touch/usage.md
     #- Troubleshooting: Touch/troubleshooting.md
   - Display Considerations:
+    - Display Selection: DisplayConsiderations/selection.md
+    - Display Size: DisplayConsiderations/size.md
     - Display Type: DisplayConsiderations/type.md
-    #- Mounting: DisplayConsiderations/mounting.md
+    - Mounting: DisplayConsiderations/mounting.md
     - Protection: DisplayConsiderations/protection.md
   - Hardware Comparison: hardwareComparison.md
   - FAQ: faq.md
